# gb_emu_esp32

./: .gitignore  CMakeLists.txt  README.md  debug-ppu.md  optimize.sh  sdkconfig  sdkconfig.backup  sdkconfig.bak  sdkconfig.old
.github/: copilot-instructions.md
.github/agents/: embedded-cpp-optimizer.agent.md
docs/: CGB_refactor_checklist.md  CGB_refactor_plan  README_PCB_Design.md  architecture_overview.md
main/: CMakeLists.txt  apu.cpp  apu.hpp  cpu.cpp  cpu.hpp  display.hpp  emulator.cpp  emulator.hpp  gpio_pins.hpp  joypad.hpp  lcd_display.cpp  lcd_display.hpp  main.cpp  memory_bus.cpp  memory_bus.hpp  menu.cpp  menu.hpp  ppu.cpp  ppu.hpp  save_manager.cpp  save_manager.hpp  serial.cpp  serial.hpp  spi.hpp  storage.cpp  storage.hpp  text_renderer.hpp  timer.cpp  timer.hpp
main_board/: #auto_saved_files#  fp-info-cache  main_board-B_Cu.gbr  main_board-B_Mask.gbr  main_board-B_Paste.gbr  main_board-B_Silkscreen.gbr  main_board-Edge_Cuts.gbr  main_board-F_Cu.gbr  main_board-F_Mask.gbr  main_board-F_Paste.gbr  main_board-F_Silkscreen.gbr  main_board-In1_Cu.gbr  main_board-In2_Cu.gbr  main_board-job.gbrjob  main_board.kicad_pcb  main_board.kicad_prl  main_board.kicad_pro  main_board.kicad_sch  ~main_board.kicad_sch.lck
main_board/JLCPCB/: main_board-B_Cu.gbr  main_board-B_Mask.gbr  main_board-B_Paste.gbr  main_board-B_Silkscreen.gbr  main_board-Edge_Cuts.gbr  main_board-F_Cu.gbr  main_board-F_Mask.gbr  main_board-F_Paste.gbr  main_board-F_Silkscreen.gbr  main_board-In1_Cu.gbr  main_board-In2_Cu.gbr  main_board-NPTH.drl  main_board-PTH.drl  main_board-job.gbrjob
